--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#">Subscribe</a></li>
         </ul>
         <blockquote>
-            "The only way to achieve the impossible is to believe it is possible."
+            "The only way to achieve the impossible is to <strong>believe</strong> it is possible."
             <cite>– Charles Kingsleigh</cite>
           </blockquote>
     </nav>
@@ -45,15 +45,21 @@
             </div>
             <div class="blog-post">
                 <h2>Getting with the Script.. Javascript !!</h2>
+                <figure>
                 <img src="static/img/JSPINK.jpg" alt="an image of Javascript logo">
+                <figcaption>The Road to Javascript</figcaption>
+                </figure>
                 <p>Just when I was starting to get the hang of things, I met my ultimate challenge of 2024 -- Javascript !! What .. </p>
                 <div class="button-group">
                     <a href="static/html/blogpost.html" class="read-more">Read More</a>
                 </div>
             </div>
             <div class="blog-post">
-                <h2>A Dream Deferred : My Blog Project</h2>
+                <h2>A Dream <u>Deferred</u> : My Blog Project</h2>
+                <figure>
                 <img src="static/img/PROJECTPINK.jpg" alt="a graphic of a project">
+                <figcaption>Is a Project ever really finished?</figcaption>
+                </figure>
                 <p>The thing about failure is, at some point, it is time to get up and try again. This is.. </p>
                 <div class="button-group">
                     <button class="read-more">Read More</button>
