--- a/static/html/blogpost.html
+++ b/static/html/blogpost.html
@@ -32,7 +32,10 @@
         <div class="blog-posts">
             <div class="blog-post">
                 <h2>Allow me to Re-Introduce Myself to HTML and CSS</h2>
+                <figure>
                 <img src="static/img/HTML5PINK.jpg" alt="an image of HTML5 logo">
+                <figcaption>HTML5</figcaption> 
+                </figure>
                 <p>If there is anything more intimidating than entering the world of coding as a beginner without a four year degree, I'd love to know...</p>
                 <p>
                     **Lorem ipsum dolor sit amet, consectetur adipiscing elit.** Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
